# music-hive

./: .cache  AUTOMATIC_FFMPEG_SETUP_COMPLETE.md  COVER_ART_FIXES.md  DEPENDENCY_INTEGRATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOWNLOAD_FIXES.md  FFMPEG_DEPENDENCY_SUMMARY.md  FFMPEG_INSTALLATION_GUIDE.md  FFMPEG_NO_ADMIN_SOLUTION.md  FIXES_SUMMARY.md  GUI_DISPLAY_FIXES.md  MAC_SETUP.md  METADATA_ENHANCEMENT_SUMMARY.md  NAVIGATION_IMPLEMENTATION.md  README.md  SEARCH_FIXES_SUMMARY.md  SEARCH_RESULTS_FIXES.md  ZERO_SETUP_SOLUTION.md  auto_ffmpeg_installer.py  auto_setup.py  bundled_ffmpeg.py  complete_setup_verification.py  config_with_credentials.py  credentials.env  diagnose_gui_issue.py  download_project.py  downloader.py  easy_setup.py  ffmpeg_direct_install.py  install_ffmpeg_macos.py  main.py  process_text.py  pyproject.toml  quick_launcher.py  quick_setup.py  quick_test.py  reliable_ffmpeg_install.py  run_app.py  search_spotify.py  search_youtube.py  (+25 more)
attached_assets/: content-1747768147927.md
gui/: __init__.py  audio_quality_selector.py  download_tab.py  library_tab.py  main_window.py  style.py
preview/: download_tab.html  download_tab_original_style.html  functional_navigation.html  index.html  library_tab.html  library_tab_original_style.html  original_design.html  sidebar_design.html  simple_design.html  updated_design.html
utils/: __init__.py  config.py  helpers.py  song_filter.py  spotify_cache.py
