[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "imageio-ffmpeg>=0.6.0",
    "mutagen>=1.47.0",
    "pyqt6>=6.9.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "yt-dlp>=2025.4.30",
]
